--- a/scheduler/cron.yaml
+++ b/scheduler/cron.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: CronWorkflow
 metadata:
-  name: phone-accuracy
+  name: time-to-failure
 spec:
   schedule: "*/3 * * * *"
   concurrencyPolicy: "Replace"
@@ -20,7 +20,7 @@ spec:
     # Docker Images
     - name: preprocess
       container:
-        image: us-central1-docker.pkg.dev/data-science-362714/data-science/phone-accuracy-preprocess:1.0
+        image: us-central1-docker.pkg.dev/data-science-362714/data-science/time-to-failure-preprocess:1.0
     - name: train
       container:
-        image: us-central1-docker.pkg.dev/data-science-362714/data-science/phone-accuracy-train:1.0
+        image: us-central1-docker.pkg.dev/data-science-362714/data-science/time-to-failure-train:1.0
