--- a/scheduler/workflow.yaml
+++ b/scheduler/workflow.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  name: phone-accuracy
+  name: time-to-failure
 spec:
   entrypoint: entry
   templates:
@@ -16,7 +16,7 @@ spec:
   # Docker Images
   - name: preprocess
     container:
-      image: us-central1-docker.pkg.dev/data-science-362714/data-science/phone-accuracy-preprocess:1.0
+      image: us-central1-docker.pkg.dev/data-science-362714/data-science/time-to-failure-preprocess:1.0
   - name: train
     container:
-      image: us-central1-docker.pkg.dev/data-science-362714/data-science/phone-accuracy-train:1.0
+      image: us-central1-docker.pkg.dev/data-science-362714/data-science/time-to-failure-train:1.0
